@@ -1,9 +1,6 @@
 AUX qcdemu-mimelnk.patch 511 RMD160 e69969c8a8bb07cee6aec9935af11c8dd13fcfdf SHA1 fab1cbd498c87f8260bfd43f9f530fa9792f059b SHA256 3e01b4f0d384e2e905ba3b343f7213ef270c43dd00943839a44dc30d5a294357
-DIST qcdemu-0.2.1.tar.gz 27561 RMD160 c8a6773938c6e92e2bc1a05f083b4d0bf06b8d14 SHA1 49a960709b60dbd43fa7a33e8babecb2f454f0ba SHA256 30af7b6f24490a316842b0858f468dae3017caa1e4c3f7bc7d4259dc10d46202
 DIST qcdemu-0.2.2.tar.gz 27963 RMD160 52869c92869a1d331704285af76cf3847bc721c0 SHA1 de25ed216e33aadb7a40853cfbaaaeb0db52685e SHA256 891a353a364a90ec25406cb14c63fa7c2c4f7649abc6b39d34abaf59e99579c7
 DIST qcdemu-0.2.3.tar.gz 28229 RMD160 006afe2167a6357b3071bd3a4c6dee6ced970154 SHA1 be632382c463ccd811cf732ddb0ed1be4babcedc SHA256 89b8bf2e2ba1d8d85ec126b4347d88f51f49d10da8be858a264606855571293b
-EBUILD qcdemu-0.2.1-r1.ebuild 703 RMD160 2982d1f4905a2a7a8e9262c60ec7ba4d90e0ba8a SHA1 d7fe985ea09542008cbc2d7b6c89b4939e004432 SHA256 4abcd9ec5f66d56dc2e310481d21584b9ddce6426c9bc0b2c8656be94e56874e
-EBUILD qcdemu-0.2.1.ebuild 642 RMD160 b0c4fcfa9749d95e05fcfbfa8f88156008383dcd SHA1 1b43345add925f328675743fc728403a13a5fc5e SHA256 e0a33f22c5be13de78af5c86c016738c7866b5f7b1d3ae0481c85af0c6c50328
 EBUILD qcdemu-0.2.2.ebuild 688 RMD160 4961b51be8cac893837000cf777608bd5bfb3511 SHA1 0c7b7360256151a0c6b12520a40f6827372924d7 SHA256 a68436ab8d3bd83ad620a58385999a2f62072b8c013bac68fa39e782421771c6
 EBUILD qcdemu-0.2.3.ebuild 688 RMD160 4961b51be8cac893837000cf777608bd5bfb3511 SHA1 0c7b7360256151a0c6b12520a40f6827372924d7 SHA256 a68436ab8d3bd83ad620a58385999a2f62072b8c013bac68fa39e782421771c6
-MISC ChangeLog 1574 RMD160 616b5d58baa074cbc4bde4d51e03ae1aa7f43bdd SHA1 ab81d8ec03439149b28ed6ca61fdb089ab1a3352 SHA256 d92ec0873b99d7abd9a5aae3518b3dad7b8eefbcb38212dc98d3bdc5c5b31f3d
+MISC ChangeLog 1690 RMD160 442b14e364e9f6e20b106f03ccc6120180dc8adc SHA1 f885441b11cfa3c931a0ea23e845994fb99f82a1 SHA256 256994510004d64d20d947e1cfd6ae7a93883c0d2f3d2da55f861afdf1e3dfad
