@@ -1,37 +1,0 @@
-# Copyright 1999-2009 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: $
-
-EAPI=2
-
-inherit qt4
-
-DESCRIPTION="A simple frontend for CDemu"
-HOMEPAGE="http://my.opera.com/mziab/blog/"
-SRC_URI="http://www.jrkrpg.pl/mziab/${P}.tar.gz"
-
-LICENSE="GPL-3"
-SLOT="0"
-KEYWORDS="~amd64 ~x86"
-IUSE=""
-
-DEPEND="|| ( =x11-libs/qt-4.3*[dbus]
-	( x11-libs/qt-gui:4
-	x11-libs/qt-dbus:4 ) )"
-RDEPEND="${DEPEND}
-	>=app-cdr/cdemud-1.1.0"
-
-S="${WORKDIR}"
-
-src_prepare() {
-	epatch "${FILESDIR}/${PN}-mimelnk.patch"
-}
-
-src_compile() {
-	eqmake4 || die "eqmake4 failed"
-	emake || die "emake failed"
-}
-
-src_install() {
-	emake INSTALL_ROOT="${D}" install || die "emake install failed"
-}
