@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  21 Dec 2009; Michał Ziąbkowski <mziab@o2.pl> -qcdemu-0.2.1.ebuild,
+  -qcdemu-0.2.1-r1.ebuild:
+  Removed cruft.
+
   21 Nov 2009; Michał Ziąbkowski <mziab@o2.pl> +qcdemu-0.2.3.ebuild:
   Bumped.
 
